--- a/atip-portfolio/src/App.css
+++ b/atip-portfolio/src/App.css
@@ -37,7 +37,7 @@ img {
 
 /* Utilities */
 .container {
-  max-width: 1100px;
+  max-width: 1245px;
   margin: auto;
   overflow: hidden;
   padding: 0 2rem;
@@ -337,6 +337,8 @@ button {
   z-index: 1;
   width: 100%;
   top: 0;
+  position: fixed;
+
 }
 
 .navbar ul {
@@ -556,9 +558,26 @@ button {
 }
 
 .resume-btn{
+  margin-top: 4.3rem;
   background-color: blanchedalmond;
 }
 
+.about-content{
+  display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10rem;
+}
+
+.about-content-detail{
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+  font-family: inherit;
+}
+
+.about-content-detail-detail > p{
+  margin-top: 1.5rem;
+}
 /* Mobile Styles */
 @media (max-width: 700px) {
   .container {
