--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,15 @@ img {
   margin-bottom: 3rem;
 }
 
+.intro-container {
+  max-width: 1245px;
+  margin: auto;
+  overflow: hidden;
+  padding: 0 9rem;
+  margin-top: 6rem;
+  margin-bottom: 3rem;
+}
+
 
 .sign-in-up{
   display: flex;
@@ -548,18 +557,19 @@ button {
   margin-bottom: 0.5rem;
 }
 
-.introduce{
-  background-color: #0077b5;
-  display: flex;
-  justify-content: space-evenly;
+.introduce-content{
+  display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 2rem;
 }
 
-.introduce > div{
+.introduce-content-left{
+  font-size: 2.5rem;
 }
 
 .resume-btn{
-  margin-top: 4.3rem;
-  background-color: blanchedalmond;
+  margin-top: 3rem;
+  text-align: center;
 }
 
 .about-content{
@@ -578,6 +588,131 @@ button {
 .about-content-detail-detail > p{
   margin-top: 1.5rem;
 }
+
+.my-name{
+    font-size: 3rem;
+    letter-spacing: 1px;
+    font-weight: 900;
+    color: #E43F5A;
+  }
+
+
+
+/* Fantasy-button */
+
+.button-78 {
+  align-items: center;
+  appearance: none;
+  background-clip: padding-box;
+  background-color: initial;
+  background-image: none;
+  border-style: none;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  flex-direction: row;
+  flex-shrink: 0;
+  font-family: Eina01,sans-serif;
+  font-size: 16px;
+  font-weight: 800;
+  justify-content: center;
+  line-height: 24px;
+  margin: 0;
+  min-height: 64px;
+  outline: none;
+  overflow: visible;
+  padding: 19px 26px;
+  pointer-events: auto;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  width: auto;
+  word-break: keep-all;
+  z-index: 0;
+}
+
+@media (min-width: 768px) {
+  .button-78 {
+    padding: 19px 32px;
+  }
+}
+
+.button-78:before,
+.button-78:after {
+  border-radius: 80px;
+}
+
+.button-78:before {
+  background-image: linear-gradient(92.83deg, #ff7426 0, #f93a13 100%);
+  content: "";
+  display: block;
+  height: 100%;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: -2;
+}
+
+.button-78:after {
+  background-color: initial;
+  background-image: linear-gradient(#541a0f 0, #0c0d0d 100%);
+  bottom: 4px;
+  content: "";
+  display: block;
+  left: 4px;
+  overflow: hidden;
+  position: absolute;
+  right: 4px;
+  top: 4px;
+  transition: all 100ms ease-out;
+  z-index: -1;
+}
+
+.button-78:hover:not(:disabled):before {
+  background: linear-gradient(92.83deg, rgb(255, 116, 38) 0%, rgb(249, 58, 19) 100%);
+}
+
+.button-78:hover:not(:disabled):after {
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  transition-timing-function: ease-in;
+  opacity: 0;
+}
+
+.button-78:active:not(:disabled) {
+  color: #ccc;
+}
+
+.button-78:active:not(:disabled):before {
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), linear-gradient(92.83deg, #ff7426 0, #f93a13 100%);
+}
+
+.button-78:active:not(:disabled):after {
+  background-image: linear-gradient(#541a0f 0, #0c0d0d 100%);
+  bottom: 4px;
+  left: 4px;
+  right: 4px;
+  top: 4px;
+}
+
+.button-78:disabled {
+  cursor: default;
+  opacity: .24;
+}
+
+/* Fantasy-button */
+
+
 /* Mobile Styles */
 @media (max-width: 700px) {
   .container {
