--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #fff;
-  color: #333;
+  background-color: #f5f5f7;
+  color: #1d1d1f;
 }
 
 a {
@@ -40,9 +40,11 @@ img {
   max-width: 1245px;
   margin: auto;
   overflow: hidden;
-  padding: 0 2rem;
+  padding: 2rem 2rem;
   margin-top: 6rem;
   margin-bottom: 3rem;
+  background: white;
+  border-radius: 18px;
 }
 
 .intro-container {
@@ -644,6 +646,59 @@ button {
   margin-left: 3rem;
 }
 
+.skill-content{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10rem;
+    margin-bottom: 2rem;
+}
+
+.skill-content-left{
+  font-size: 1.1rem;
+}
+
+.skill-content-detail{
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+  font-family: inherit;
+}
+
+.skill-list{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 3rem;
+  max-width: 15rem;
+  margin-top: 1.5rem;
+}
+
+.skill-list-bullet{
+  list-style: disc;
+  margin-left: 3rem;
+}
+
+.footer{
+  background: #1B1B2F;
+  color: #fff;
+  text-align: -webkit-center;
+  padding: 5rem;
+}
+
+.footer-content{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 1rem;
+    max-width: 500px;
+    margin-bottom: 3rem;
+}
+
+.copyright{
+  text-transform: uppercase;
+}
+
+.footer-ico{
+  width: 50%;
+}
 
 /* Fantasy-button */
 
