--- a/src/App.css
+++ b/src/App.css
@@ -689,7 +689,7 @@ button {
 
 .footer-content{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-gap: 1rem;
     max-width: 500px;
     margin-bottom: 3rem;
